# NaiveOtp

./: README.md  fbotp.py  naiveotp.py  requirements.txt  setup.cfg  setup.py
naiveotp/: __init__.py  naiveotp.py
old/: fbotp3.py  naiveotp3.py
