[metadata]
name = naiveotp
version = 1.0
description = Simple OTP class
author = mynameisv
author_email = nospam@nospam.com
url = https://github.com/mynameisv/naiveotp
classifiers =
	Programming Language :: Python
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3.7
	License :: DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	qrcode
	Pillow